--- a/Laboratorio 2/src/main/resources/application.properties
+++ b/Laboratorio 2/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=Laboratorio 2
+
+spring.jpa.database=postgresql
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:postgresql://localhost:5432/laboratorio_2
+spring.datasource.username=postgres
+spring.datasource.password=admin
